# codex-lb

./: .all-contributorsrc  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.observability.yml  docker-compose.yml  justfile  pyproject.toml
.codex/environments/: environment.toml
.github/workflows/: ci.yml
app/: cli.py  dependencies.py  main.py
app/core/: crypto.py  errors.py
app/db/: models.py  recover.py  session.py  sqlite_utils.py
app/static/: 7.css  index.css  index.html  index.js  selection_utils.js  sort_utils.js  state_defaults.js  ui_utils.js
docs/plans/: 2026-01-27-v1-chat-bridge-implementation.md
observability/prometheus/: prometheus.yml
openspec/: config.yaml  context-docs-cue.md
scripts/: account_status_debug.py  accounts_tool.py  check_frontend_assets.py  openai_compat_live_check.py  perf_accounts.py  perf_compact.py  perf_dashboard_overview.py  perf_streaming.py  upstream_stub.py
tests/: conftest.py  test_request_logs_options_api.py
tests/integration/: test_accounts_api.py  test_accounts_api_extended.py  test_codex_client_compat.py  test_codex_usage_api.py  test_dashboard_overview.py  test_dashboard_static_assets.py  test_dashboard_totp_auth.py  test_db_models.py  test_force_account_header.py  test_load_balancer_integration.py  test_metrics_endpoint.py  test_migrations.py  test_oauth_flow.py  test_openai_client_compat.py  test_openai_compat_features.py  test_proxy_api_extended.py  test_proxy_chat_completions.py  test_proxy_compact.py  test_proxy_responses.py  test_proxy_selection_strategy.py  test_proxy_sticky_sessions.py  test_repositories.py  test_request_decompression.py  test_request_logs_api.py  test_request_logs_filters.py  test_secondary_quota_estimates.py  test_settings_api.py  test_usage_api.py  test_usage_summary.py  test_v1_models.py
tests/unit/: test_auth.py  test_auth_manager.py  test_chat_request_mapping.py  test_chat_response_mapping.py  test_codex_session_id_fallback.py  test_db_session.py  test_debug_lb_endpoints.py  test_fingerprints.py  test_frontend_ui_utils.py  (+28 more)
(+269 files in other folders)
